Bug 341397 - plasma-nm applet incorrectly uses non-latin chars in login name for vpn
Summary: plasma-nm applet incorrectly uses non-latin chars in login name for vpn
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR grave
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-29 11:12 UTC by Sergey Sarbash
Modified: 2024-12-23 18:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
There was a russian word "верстальщик". (44.06 KB, image/png)
2014-11-29 11:12 UTC, Sergey Sarbash
Details
first shot with connection list (44.71 KB, image/png)
2014-11-29 11:13 UTC, Sergey Sarbash
Details
first typing in the TextFields (41.81 KB, image/png)
2014-11-29 11:14 UTC, Sergey Sarbash
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey Sarbash 2014-11-29 11:12:14 UTC
Created attachment 89765 [details]
There was a russian word "верстальщик".

Hello.

On my second job an admin sets cyrillic letters in my login name for vpn.
When I type chars in a Connection Properties Dialog Window in the LineEdit for login name it's OK. I see correct exactly typed chars.
But when I save Options for my vpn connection and reopen Dialog again I see strange symbols inplace of a login name.
I had a few unlucky tries with a plasma-nm applet to set a vpn connection to my remote work PC.
After that, to resolve a problem with a vpn connection I've installed kvpnc. It smoothly works even with cyrillic login. And it shows a typed login everytime correctly.
Unfortunately that admin knows only Windows based solutions and don't give me any clue howto set my vpn-link to a remote Windows-machine. So I've had some training with vpn params before the success. (I've WinXP in my VirtualBox for some work and it can't connect too. I was unable to splice them.)
I don't know if it exactly is a problem with non-latin chars or maybe something else too.
But seems like this at the moment.
After the luck with kvpnc I had an unsuccess with the same set of params in the applet.
Comment 1 Sergey Sarbash 2014-11-29 11:13:36 UTC
Created attachment 89766 [details]
first shot with connection list
Comment 2 Sergey Sarbash 2014-11-29 11:14:31 UTC
Created attachment 89767 [details]
first typing in the TextFields
Comment 3 Lukáš Tinkl 2014-11-29 14:26:25 UTC
OK, can you please try a similar thing with other connection types, other than VPN?
Comment 4 Christoph Feck 2014-12-12 21:08:53 UTC
If you can provide the information requested in comment #3, please add it.
Comment 5 V字龍(Vdragon) 2015-01-10 17:57:12 UTC
Hi, I can reproduce similar issue in wifi connection editor widget, see bug 342697.
It seems that *Widget::loadConfig() loads some UTF-8 strings as ASCII(latin?) string thus making the content garbled.
Comment 6 Jan Grulich 2015-03-02 14:41:59 UTC
Git commit 8f78e090a75e75cbb1fb8ef0ab5eda64feb534d1 by Jan Grulich.
Committed on 02/03/2015 at 14:41.
Pushed by grulich into branch '0.9.3'.

Fix storing of non-latin characters

M  +3    -3    vpn/pptp/pptpwidget.cpp

http://commits.kde.org/plasma-nm/8f78e090a75e75cbb1fb8ef0ab5eda64feb534d1