Fix storing of non-latin characters

BUG:341397